--- a/contato.html
+++ b/contato.html
@@ -47,14 +47,14 @@
       <section class="contato-dados" aria-label="Endereço">
         <h2 class="font-1-m cor-0">Loja Online</h2>
         <div class="contato-endereco font-2-s cor-4">
-          <p>Rua Ali Perto, 35</p>
-          <p>Rio de Janeiro - RJ</p>
+          <p>Rua Ali Perto, 69</p>
+          <p>Brasília - DF</p>
           <p>Brasil - Terra - Vita Láctea</p>
         </div>
         <address class="contato-meios font-2-s cor-4">
           <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
           <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
-          <a href="tel:+552199999999">+55 21 9999-9999</a>
+          <a href="tel:+552199999999">+55 61 9 9181-6280</a>
         </address>
         <div class="contato-redes">
           <a href="./">
@@ -97,14 +97,14 @@
     <div class="lojas-item">
       <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
       <div class="lojas-conteudo">
-        <h3 class="font-1-xl">Rio de Janeiro</h3>
+        <h3 class="font-1-xl">Brasília</h3>
         <div class="lojas-dados font-2-s cor-8">
-          <p>Rua Ali Perto, 25</p>
-          <p>Rio de Janeiro - RJ</p>
+          <p>Rua Ali Perto, 69</p>
+          <p>Brasília - DF</p>
         </div>
         <div class="lojas-dados font-2-s cor-8">
-          <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
-          <a href="tel:+552199999999">+55 21 9999-9999</a>
+          <a href="mailto:rj@bikcraft.com">df@bikcraft.com</a>
+          <a href="tel:+552199999999">+55 61 9 9181-6280</a>
         </div>
         <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
       </div>
